KUBERNETES/Services/clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
    tier: backend
  name: mysql-db
spec:
  clusterIP: None
  ports:
  - name: "3306"
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
    tier: backend
  type: ClusterIP
status:
  loadBalancer: {}
