KUBERNETES/Services/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-webapp
    tier: frontend
  name: front-webapp
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: front-webapp
    tier: frontend
  type: NodePort
status:
  loadBalancer: {}
