KUBERNETES/Services/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.annotation1: ingressAnnotated
  creationTimestamp: null
  name: myingress2
  namespace: webapp
spec:
  rules:
  - host: my-first-ingress.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8080
        path: /web
        pathType: Exact
status:
  loadBalancer: {}
